[gd_scene load_steps=5 format=3 uid="uid://bmw2bd3wnlihg"]

[ext_resource type="Script" path="res://scenes/scripts/menu.gd" id="1_8hpx8"]
[ext_resource type="Texture2D" uid="uid://difi524jggj23" path="res://light.png" id="2_mdaoa"]
[ext_resource type="Script" path="res://scenes/scripts/start_screen.gd" id="3_xqvjt"]

[sub_resource type="SystemFont" id="SystemFont_rkcg8"]
font_names = PackedStringArray("Al Bayan")
subpixel_positioning = 0

[node name="Menu" type="CanvasGroup"]
script = ExtResource("1_8hpx8")

[node name="PlayButton" type="Button" parent="."]
offset_left = 280.0
offset_top = 346.0
offset_right = 483.0
offset_bottom = 439.0
text = "PLAY"

[node name="ShopButton" type="Button" parent="."]
offset_left = 664.0
offset_top = 347.0
offset_right = 854.0
offset_bottom = 438.0
text = "SHOP"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(572, 314)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.8)
texture = ExtResource("2_mdaoa")
texture_scale = 4.36

[node name="StartScreen" type="ColorRect" parent="."]
offset_left = -76.0
offset_top = -88.0
offset_right = 1320.0
offset_bottom = 729.0
color = Color(0, 0, 0, 1)
script = ExtResource("3_xqvjt")

[node name="Label" type="Label" parent="."]
offset_left = 225.0
offset_top = 140.0
offset_right = 926.0
offset_bottom = 333.0
theme_override_fonts/font = SubResource("SystemFont_rkcg8")
theme_override_font_sizes/font_size = 128
text = "BUY STUFF"

[node name="StartTimer" type="Timer" parent="."]
wait_time = 4.335
one_shot = true

[node name="Level0Button" type="Button" parent="."]
offset_left = 417.0
offset_top = 69.0
offset_right = 533.0
offset_bottom = 116.0
text = "Level 0"

[node name="LevelSButton" type="Button" parent="."]
offset_left = 577.0
offset_top = 69.0
offset_right = 693.0
offset_bottom = 116.0
text = "Level Spawn"

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="ShopButton" to="." method="_on_shop_button_button_down"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="button_down" from="Level0Button" to="." method="_on_change_2_level_0"]
[connection signal="button_down" from="LevelSButton" to="." method="_on_change_2_level_spawn"]
